@@ -224,6 +224,7 @@ include_once ('includes/media_reorder_count.php');
 		*/
 
 		//Album Reorder Media  ( If media exists and is greater than 1 item ) -----
+		/*
 		if (PGV_USER_CAN_EDIT && $tot_med_ct>1) {
 			if ($LB_AL_HEAD_LINKS == "both") {
 				print "<td class=\"width15 center wrap\" valign=\"top\">";
@@ -251,6 +252,7 @@ include_once ('includes/media_reorder_count.php');
 				//print "<td width=\"5%\">&nbsp;</td>";
 			}
 		}
+		*/
 
 		//Popup Reorder Media ( If media exists and is greater than 1 item ) -----
 		if (PGV_USER_CAN_EDIT && $tot_med_ct>1) {
@@ -258,7 +260,8 @@ include_once ('includes/media_reorder_count.php');
 				print "<td class=\"width15 center wrap\" valign=\"top\">";
 				print "<a href=\"javascript: reorder_media()\">" ;
 				print "<img src=\"modules/lightbox/images/images.gif\" class=\"icon\" title=\"{$pgv_lang['reorder_media_window']}\" alt=\"{$pgv_lang['reorder_media_window']}\" /><br />" ;
-				print "" . $pgv_lang["reorder_media_window"] . "&nbsp;";
+				//print "" . $pgv_lang["reorder_media_window"] . "&nbsp;";
+				print "" . $pgv_lang["reorder_media"] . "&nbsp;";
 				print '</a>';
 				print "</td>";
 				//print "<td width=\"5%\">&nbsp;</td>";
@@ -266,7 +269,8 @@ include_once ('includes/media_reorder_count.php');
 			}else if ($LB_AL_HEAD_LINKS == "text") {
 				print "<td class=\"width15 center wrap\" valign=\"top\">";
 				print "<a href=\"javascript: reorder_media()\">" ;
-				print "" . $pgv_lang["reorder_media_window"] . "&nbsp;";
+				// print "" . $pgv_lang["reorder_media_window"] . "&nbsp;";
+				print "" . $pgv_lang["reorder_media"] . "&nbsp;";
 				print '</a>';
 				print "</td>";
 				//print "<td width=\"5%\">&nbsp;</td>";
